force-app/main/default/objects/Lead/fields/Agency_Impact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Impact__c</fullName>
    <label>Agency Impact (low income)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>