force-app/main/default/objects/Lead/fields/Annual_budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_budget__c</fullName>
    <label>Annual budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Annual_Budget</valueSetName>
    </valueSet>
</CustomField>