force-app/main/default/objects/Lead/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>When the status is approved this field captures that paticular date this is used in the email merge fields</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>