force-app/main/default/objects/Lead/fields/Becoming_a_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Becoming_a_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Becoming a Sponsor</label>
    <type>Checkbox</type>
</CustomField>