force-app/main/default/objects/Lead/fields/Denial_Details__c.field-meta.xml
<CustomField>
    <fullName>Denial_Details__c</fullName>
    <label>Denial Details</label>
    <type>TextArea</type>
</CustomField>