force-app/main/default/objects/Lead/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <label>Primary Contact Direct Phone#</label>
    <type>Phone</type>
</CustomField>