force-app/main/default/objects/Lead/fields/Donating_Tools__c.field-meta.xml
<CustomField>
    <fullName>Donating_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donating Tools</label>
    <type>Checkbox</type>
</CustomField>