force-app/main/default/objects/Lead/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <label>Primary Contact Email address</label>
    <type>Email</type>
</CustomField>