force-app/main/default/objects/Lead/fields/Executive_Personal_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Executive_Personal_Pronouns__c</fullName>
    <label>Executive Personal Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Pronouns</valueSetName>
    </valueSet>
</CustomField>