force-app/main/default/objects/Lead/fields/Executive_Phone__c.field-meta.xml
<CustomField>
    <fullName>Executive_Phone__c</fullName>
    <label>Executive Phone</label>
    <type>Phone</type>
</CustomField>