force-app/main/default/objects/Lead/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>Primary Contact First Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>