force-app/main/default/objects/Lead/fields/How_did_you_hear_about_the_ToolBank__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_the_ToolBank__c</fullName>
    <label>How did you hear about the ToolBank?</label>
    <type>TextArea</type>
</CustomField>