force-app/main/default/objects/Lead/fields/I_am_an_executive_of_this_organization__c.field-meta.xml
<CustomField>
    <fullName>I_am_an_executive_of_this_organization__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field is checked whenever the executive email is filled - we can just look at that field and know that it&apos;s filled. This checkbox isn&apos;t referenced elsewhere.</description>
    <label>Executive Contact</label>
    <type>Checkbox</type>
</CustomField>