force-app/main/default/objects/Lead/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Primary Contact Last Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>