force-app/main/default/objects/Lead/fields/Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiration_Date__c</fullName>
    <label>Membership Expiration Date</label>
    <type>Date</type>
</CustomField>