force-app/main/default/objects/Lead/fields/npsp__CompanyCity__c.field-meta.xml
<CustomField>
    <fullName>npsp__CompanyCity__c</fullName>
    <label>Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>