force-app/main/default/objects/Lead/fields/npsp__CompanyState__c.field-meta.xml
<CustomField>
    <fullName>npsp__CompanyState__c</fullName>
    <label>Company State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>