force-app/main/default/objects/Lead/fields/Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is checked whenever the executive email is filled - we can just look at that field and know that it&apos;s filled. This checkbox isn&apos;t referenced elsewhere.</description>
    <inlineHelpText>It is  Point of Contact(For Eg - Billing contact, Executive).</inlineHelpText>
    <label>Primary contact</label>
    <type>Checkbox</type>
</CustomField>