force-app/main/default/objects/Lead/fields/Policies_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Policies_Agreement_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policies Agreement Date</label>
    <type>DateTime</type>
</CustomField>