force-app/main/default/objects/Lead/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Primary Contact Position/Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>