force-app/main/default/objects/Lead/fields/Primary_Contact_Personal_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Personal_Pronouns__c</fullName>
    <label>Primary Contact Personal Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Pronouns</valueSetName>
    </valueSet>
</CustomField>