force-app/main/default/objects/Lead/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>