force-app/main/default/objects/Lead/fields/Reason_for_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Denial__c</fullName>
    <label>Reason for Denial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>Denial_Reasons</valueSetName>
    </valueSet>
</CustomField>