force-app/main/default/objects/Lead/fields/Select_ONE_category_that_most_closely_de__c.field-meta.xml
<CustomField>
    <fullName>Select_ONE_category_that_most_closely_de__c</fullName>
    <label>Agency Mission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Welfare</fullName>
            </value>
            <value>
                <fullName>Arts, Culture, and Humanities</fullName>
            </value>
            <value>
                <fullName>Community Revitalization</fullName>
            </value>
            <value>
                <fullName>Disaster Relief and Recovery</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environment and Greenspace</fullName>
            </value>
            <value>
                <fullName>Faith-based</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing and Homelessness</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>Public, Societal Benefit</fullName>
            </value>
            <value>
                <fullName>Veterans Services</fullName>
            </value>
            <value>
                <fullName>Youth and Children</fullName>
            </value>
            <value>
                <fullName>Animal Welfare;Arts, Culture, and Humanities;Community Revitalization;Disaster Relief and Recovery;Education;Faith-based;Health;Health;Housing and Homelessness;Human Services;Public, Societal Benefit;Veterans Services;Youth and Children</fullName>
                <isActive>false</isActive>
                <label>Animal Welfare;Arts, Culture, and Humanities;Community Revitalization;Disaster Relief and Recovery;Education;Faith-based;Health;Health;Housing and Homelessness;Human Services;Public, Societal Benefit;Veterans Services;Youth and Children</label>
            </value>
            <value>
                <fullName>Disaster Relief and Recovery&lt;</fullName>
                <isActive>false</isActive>
                <label>Disaster Relief and Recovery&lt;</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>