force-app/main/default/objects/Lead/fields/sf4twitter__Fcbk_Picture__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Fcbk_Picture__c</fullName>
    <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook Picture</label>
    <type>Text</type>
</CustomField>