force-app/main/default/objects/Lead/fields/sf4twitter__Fcbk_Profile_Url__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
    <label>Facebook Profile Url</label>
    <type>Url</type>
</CustomField>