force-app/main/default/objects/Lead/fields/sf4twitter__Fcbk_User_Id__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Facebook User Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>