force-app/main/default/objects/Lead/fields/sf4twitter__Follow_Status__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Follow_Status__c</fullName>
    <description>Click on link to change following status</description>
    <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?lid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click on link to change following status</inlineHelpText>
    <label>Following on Twitter</label>
    <type>Text</type>
</CustomField>