force-app/main/default/objects/Lead/fields/sf4twitter__followed__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__followed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Followed</label>
    <type>Checkbox</type>
</CustomField>