force-app/main/default/objects/Lead/fields/sf4twitter__Klout_Score__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Klout_Score__c</fullName>
    <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Klout Score</label>
    <type>Text</type>
</CustomField>