force-app/main/default/objects/Lead/fields/sf4twitter__Origin__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>