force-app/main/default/objects/Lead/fields/sf4twitter__Twitter_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
    <label>Twitter Image Url</label>
    <type>Url</type>
</CustomField>