force-app/main/default/objects/Lead/fields/sf4twitter__Twitter_Last_tweet__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Last_tweet__c</fullName>
    <label>Twitter Last tweet</label>
    <type>DateTime</type>
</CustomField>