force-app/main/default/objects/Lead/fields/sf4twitter__Twitter_Picture__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Picture__c</fullName>
    <formula>HYPERLINK(
&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Picture</label>
    <type>Text</type>
</CustomField>