force-app/main/default/objects/Lead/fields/sf4twitter__Twitter_Status_count__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Status_count__c</fullName>
    <label>Twitter Status count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>