force-app/main/default/objects/Lead/fields/sf4twitter__Twitter_Username__c.field-meta.xml
<CustomField>
    <fullName>sf4twitter__Twitter_Username__c</fullName>
    <label>Twitter Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>