force-app/main/default/objects/Lead/fields/Staff_size_PT__c.field-meta.xml
<CustomField>
    <fullName>Staff_size_PT__c</fullName>
    <label>Staff size : PT</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>