force-app/main/default/objects/Lead/fields/ToolBank_Affiliate_Email__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Affiliate_Email__c</fullName>
    <formula>ToolBank_Location__r.Generic_Org_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToolBank Affiliate Email</label>
    <type>Text</type>
</CustomField>