force-app/main/default/objects/Lead/fields/ToolBank_Affiliate_Phone__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Affiliate_Phone__c</fullName>
    <formula>&quot;(&quot; &amp; LEFT(ToolBank_Location__r.Phone, 3) &amp; &quot;) &quot; &amp; LEFT(RIGHT(ToolBank_Location__r.Phone, 7), 3) &amp; &quot;-&quot; &amp; RIGHT(ToolBank_Location__r.Phone, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToolBank Affiliate Phone</label>
    <type>Text</type>
</CustomField>