force-app/main/default/objects/Lead/fields/ToolBank_Location__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ToolBank Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Organization is not a ToolBank Affiliate.  Please try again with another selection.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate, Disaster Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>