force-app/main/default/objects/Lead/fields/Trigger_Time_0_minutes__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_0_minutes__c</fullName>
    <description>This field is used in time dependent workflow , When ever a lead comes into salesforce then &quot;Lead source&quot; should be changed from web to other.</description>
    <formula>(NOW() - 0.00005787)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time 0 minutes</label>
    <type>DateTime</type>
</CustomField>