force-app/main/default/objects/Lead/fields/Volunteering__c.field-meta.xml
<CustomField>
    <fullName>Volunteering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteering</label>
    <type>Checkbox</type>
</CustomField>