force-app/main/default/objects/Lead/fields/Vr_Check__c.field-meta.xml
<CustomField>
    <fullName>Vr_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vr_Check</label>
    <type>Checkbox</type>
</CustomField>