force-app/main/default/objects/Lead/validationRules/Denial_Details_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Denial_Details_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Reason_for_Denial__c , &quot;Other&quot;) &amp;&amp;  ISBLANK( Denial_Details__c )</errorConditionFormula>
    <errorMessage>Denial Details are Required</errorMessage>
</ValidationRule>