force-app/main/default/objects/Lead/validationRules/Denial_Reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Denial_Reason_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Status  , &quot;Denied&quot;) &amp;&amp;  ISBLANK(TEXT(  Reason_for_Denial__c  ))</errorConditionFormula>
    <errorMessage>Please provide &apos;Reason for Denial&apos;</errorMessage>
</ValidationRule>