force-app/main/default/objects/Lead/listViews/All_Member_Applications.listView-meta.xml
<ListView>
    <fullName>All_Member_Applications</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ToolBank_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Member Applications</label>
</ListView>