force-app/main/default/objects/Lead/listViews/Atlanta_Lead.listView-meta.xml
<ListView>
    <fullName>Atlanta_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Atlanta</label>
    <queue>Atlanta</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>