force-app/main/default/objects/Lead/listViews/Atlanta_Site_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Atlanta_Site_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Atlanta Site Queue</label>
    <queue>Atlanta_Site_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>