force-app/main/default/objects/Lead/listViews/Baltimore_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Baltimore_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Baltimore Queue</label>
    <queue>Baltimore_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>