force-app/main/default/objects/Lead/listViews/Charlotte_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Charlotte_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Charlotte Queue</label>
    <queue>Charlotte_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>