force-app/main/default/objects/Lead/listViews/Denied_Member_Applications.listView-meta.xml
<ListView>
    <fullName>Denied_Member_Applications</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ToolBank_Location__c</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Open - Not Contacted,Working - Contacted,Approved</value>
    </filters>
    <label>Denied Member Applications</label>
</ListView>