force-app/main/default/objects/Lead/listViews/Houston_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Houston_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Houston Queue</label>
    <queue>Houston_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>