force-app/main/default/objects/Lead/listViews/Hub_Midwest_Lead.listView-meta.xml
<ListView>
    <fullName>Hub_Midwest_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Hub Midwest</label>
    <queue>Hub_Midwest</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>