force-app/main/default/objects/Lead/listViews/Hub_Northeast_Lead.listView-meta.xml
<ListView>
    <fullName>Hub_Northeast_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Hub Northeast</label>
    <queue>Hub_Northeast</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>