force-app/main/default/objects/Lead/listViews/Hub_Rocky_Mountain_Lead.listView-meta.xml
<ListView>
    <fullName>Hub_Rocky_Mountain_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Hub Rocky Mountain</label>
    <queue>Hub_Rocky_Mountain</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>