force-app/main/default/objects/Lead/listViews/Hub_South_Central_Lead.listView-meta.xml
<ListView>
    <fullName>Hub_South_Central_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Hub South Central</label>
    <queue>Hub_South_Central</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>