force-app/main/default/objects/Lead/listViews/Magic_City_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Magic_City_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Magic City Queue</label>
    <queue>Magic_City_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>